force-app/main/default/objects/Daily_Expected_Production__c/Daily_Expected_Production__c.object-meta.xml
<CustomObject>
    <label>Daily Expected Production</label>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Daily Expected Production Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Expected Productions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>