force-app/main/default/objects/Daily_Expected_Production__c/fields/Completed_Today__c.field-meta.xml
<CustomField>
    <fullName>Completed_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>