force-app/main/default/objects/Daily_Expected_Production__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <label>Daily Report</label>
    <referenceTo>ozbee__Production_Job_Report__c</referenceTo>
    <relationshipLabel>Daily Expected Productions</relationshipLabel>
    <relationshipName>Daily_Expected_Productions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>