force-app/main/default/objects/Daily_Expected_Production__c/fields/Expected_Total__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total__c</fullName>
    <label>Expected Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>