force-app/main/default/objects/Daily_Expected_Production__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Measurement</label>
    <length>40</length>
    <type>Text</type>
</CustomField>