force-app/main/default/objects/Daily_Expected_Production__c/fields/Previously_Completed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previously Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>