force-app/main/default/objects/Daily_Expected_Production__c/fields/Production_Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Production_Schedule_Item__c</fullName>
    <label>Production Schedule Item</label>
    <referenceTo>ozbee__Production_Schedule_Item__c</referenceTo>
    <relationshipLabel>Daily Expected Productions</relationshipLabel>
    <relationshipName>Daily_Expected_Productions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>