force-app/main/default/objects/Daily_Expected_Production__c/validationRules/Cant_Exceed_Expected_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Exceed_Expected_Total</fullName>
    <active>true</active>
    <errorConditionFormula
  >Completed_Today__c +  Previously_Completed__c &gt;  Expected_Total__c</errorConditionFormula>
    <errorMessage
  >Previously completed and Completed Today cannot exceed Expected Total</errorMessage>
</ValidationRule>